# gl-scratchnotes

./: CMakeLists.txt  README.md  install.bat  newproject.bat  test.bat
01-hello-window/: CMakeLists.txt
demos/01-hello-window/src/: main.cpp
tests/render-pipeline/: CMakeLists.txt
